Update feature card colors for liquid intake section

--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
                     </div>
                     <div class="feature-card p-4 text-center text-lg-start">
                         <div class="feature-icon mb-3 me-lg-auto">
-                            <i class="fas fa-tint fa-2x" style="color: #0874a2;"></i>
+                            <i class="fas fa-tint fa-2x" style="color: #26a7de;"></i>
                         </div>
-                        <h3 style="color: #0874a2;">Registro de Líquidos</h3>
+                        <h3 style="color: #26a7de;">Registro de Líquidos</h3>
                         <p>Acompanhe sua ingestão de líquidos e mantenha-se hidratado.</p>
                     </div>
                 </div>
