--- a/index.html
+++ b/index.html
@@ -360,8 +360,8 @@
                     </ul>
                 </div>
                 <div class="col-lg-3 mb-lg-0">
-                    <h5>Desenvolvido por</h5>
-                    <a href="https://www.umdesenvolvedor.com.br" target="_blank">www.umdesenvolvedor.com.br</a>
+                    <h5>Feito por</h5>
+                    <a href="https://www.umdesenvolvedor.com.br" target="_blank">UmDesenvolvedor</a>
                 </div>
             </div>
             <div class="row mt-4">
