--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="assets/favicon.ico?v=1" type="image/x-icon">
     <!-- Structured data for rich snippets -->
     <script type="application/ld+json">
         {
@@ -44,6 +44,10 @@
     <header class="sticky-top">
         <nav class="navbar navbar-expand-lg navbar-dark py-3" style="background-color: #59bb7e;">
             <div class="container">
+                <a class="navbar-brand d-flex align-items-center" href="index.html">
+                    <img src="assets/icon-branco.png" alt="AmPmKcal" style="height: 40px; width: 40px; object-fit: cover;" class="me-2">
+                    <span>AmPmKcal</span>
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -99,70 +103,21 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-6 text-center">
-                    <img src="assets/app-screens.png" alt="AmPmKcal App Screenshots" class="img-fluid app-showcase">
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- About Section -->
-    <section id="about" class="about-section py-5 bg-light">
-        <div class="container">
-            <div class="text-center mb-5">
-                <h2 class="section-title">Transforme Seus Objetivos em Resultados</h2>
-                <p class="section-description mx-auto">
-                    O contador de calorias e macronutrientes que guia sua jornada para ganhar massa muscular, perder
-                    peso ou manter o peso atual e viver de forma mais saudável.
-                </p>
-            </div>
-
-            <div class="row g-4">
-                <div class="col-lg-4 col-md-6">
-                    <div class="about-card h-100 p-4 text-center">
-                        <div class="about-icon mb-3">
-                            <i class="fas fa-calculator fa-3x" style="color: #3ea264;"></i>
-                        </div>
-                        <h3 class="h5 mb-3" style="color: #3ea264;">Planejamento Nutricional Personalizado</h3>
-                        <p>Quer atingir suas metas de forma eficiente? O AmPmKcal calcula com precisão seu consumo ideal
-                            de calorias, macronutrientes (proteínas, carboidratos e gorduras) e líquidos. Tenha um plano
-                            alimentar feito sob medida para seus objetivos, seja hipertrofia, emagrecimento ou
-                            manutenção do peso.</p>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6">
-                    <div class="about-card h-100 p-4 text-center">
-                        <div class="about-icon mb-3">
-                            <i class="fas fa-chart-line fa-3x" style="color: #3ea264;"></i>
-                        </div>
-                        <h3 class="h5 mb-3" style="color: #3ea264;">Monitore Sua Alimentação com Facilidade</h3>
-                        <p>Registre suas refeições de forma rápida e intuitiva. Nosso aplicativo conta com um vasto
-                            banco de dados de alimentos, incluindo a <strong>Tabela TACO (Tabela Brasileira de
-                                Composição de Alimentos)</strong>, garantindo precisão para a sua dieta. Acompanhe seu
-                            progresso em tempo real com gráficos detalhados.</p>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-12">
-                    <div class="about-card h-100 p-4 text-center">
-                        <div class="about-icon mb-3">
-                            <i class="fas fa-mobile-alt fa-3x" style="color: #3ea264;"></i>
-                        </div>
-                        <h3 class="h5 mb-3" style="color: #3ea264;">O Controle da Sua Nutrição na Palma da Mão, 24h por
-                            Dia</h3>
-                        <p>Com o AmPmKcal, você tem autonomia total sobre sua alimentação. Deixe de lado as suposições e
-                            tenha a certeza de que cada refeição contribui para o seu sucesso. Monitore, ajuste e
-                            conquiste seus objetivos com a ferramenta definitiva para uma vida mais saudável.</p>
-                    </div>
+                <div class="col-lg-6 text-center d-flex justify-content-center">
+                    <img src="assets/app-screens.png" alt="AmPmKcal App Screenshots" style="max-width: 150%; height: auto;">
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Features Section -->
-    <section id="features" class="features-section pt-0 pb-5" style="background-color: #ffffff;">
+    <section id="features" class="features-section pt-5 pb-5" style="background-color: #ffffff;">
         <div class="container">
+            <div class="row justify-content-center text-center mb-5">
+                <div class="col-lg-8">
+                    <h2 class="section-title mb-4" data-lang="features-title">Funcionalidades</h2>
+                </div>
+            </div>
             <div class="row align-items-center justify-content-center">
                 <!-- Left Features -->
                 <div class="col-lg-3 col-md-6 order-lg-1 order-3 d-flex flex-column justify-content-center" style="min-height: 600px;">
@@ -180,7 +135,7 @@
                                 style="width: 52px; height: 52px;">
                         </div>
                         <h3 data-lang="ecommerce" style="color: #3ea264;">Registro de Exercícios</h3>
-                        <p>Registre todas as suas atividades físicas e veja quantas calorias você queimou. <br>
+                        <p data-lang="exercise-tracking-desc">Registre todas as suas atividades físicas e veja quantas calorias você queimou. <br>
                             Sincronize com Google Fit.</p>
                     </div>
                     <div class="feature-card p-4 text-center text-lg-end">
@@ -188,8 +143,8 @@
                             <img src="assets/icons/measurements.png" alt="Medidas Icon" class="fa-2x"
                                 style="width: 52px; height: 52px;">
                         </div>
-                        <h3 style="color: #3ea264;">Medidas Corporais</h3>
-                        <p>Registre suas medidas corporais e acompanhe seu progresso ao longo do tempo.</p>
+                        <h3 style="color: #3ea264;" data-lang="body-measurements">Medidas Corporais</h3>
+                        <p data-lang="body-measurements-desc">Registre suas medidas corporais e acompanhe seu progresso ao longo do tempo.</p>
                     </div>
                 </div>
 
@@ -223,16 +178,6 @@
                                         style="width: 100%; height: 100%; object-fit: cover; border-radius: 25px;">
                                 </div>
                             </div>
-                            <button class="carousel-control-prev" type="button" data-bs-target="#appCarousel"
-                                data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#appCarousel"
-                                data-bs-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Next</span>
-                            </button>
                         </div>
                         
                         <!-- Phone Mockup Overlay -->
@@ -269,8 +214,8 @@
                             <img src="assets/icons/liquids.png" alt="Líquidos Icon" class="fa-2x"
                                 style="width: 52px; height: 52px;">
                         </div>
-                        <h3 style="color: #3ea264;">Registro de Líquidos</h3>
-                        <p class="text-lg-start">Acompanhe sua ingestão de líquidos e mantenha-se hidratado.</p>
+                        <h3 style="color: #3ea264;" data-lang="liquid-tracking">Registro de Líquidos</h3>
+                        <p class="text-lg-start" data-lang="liquid-tracking-desc">Acompanhe sua ingestão de líquidos e mantenha-se hidratado.</p>
                     </div>
                 </div>
 
@@ -283,8 +228,8 @@
                                 <img src="assets/icons/mood.png" alt="Humor do Dia Icon" class="fa-2x"
                                     style="width: 52px; height: 52px;">
                             </div>
-                            <h3 style="color: #3ea264;">Humor do Dia</h3>
-                            <p>Registre seu humor diariamente e identifique padrões entre sua alimentação, exercícios e
+                            <h3 style="color: #3ea264;" data-lang="daily-mood">Humor do Dia</h3>
+                            <p data-lang="daily-mood-desc">Registre seu humor diariamente e identifique padrões entre sua alimentação, exercícios e
                                 bem-estar emocional.</p>
                         </div>
                     </div>
@@ -295,8 +240,8 @@
                                 <img src="assets/icons/reports.png" alt="Relatórios Icon" class="fa-2x"
                                     style="width: 52px; height: 52px;">
                             </div>
-                            <h3 style="color: #3ea264;">Relatórios Detalhados</h3>
-                            <p>Acompanhe seu progresso com relatórios completos e gráficos detalhados sobre sua
+                            <h3 style="color: #3ea264;" data-lang="detailed-reports">Relatórios Detalhados</h3>
+                            <p data-lang="detailed-reports-desc">Acompanhe seu progresso com relatórios completos e gráficos detalhados sobre sua
                                 alimentação, exercícios e evolução.</p>
                         </div>
                     </div>
@@ -310,7 +255,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8 text-center">
-                    <h2 class="section-title mb-5">Foco em eficiência e simplicidade</h2>
+                    <h2 class="section-title mb-5" data-lang="video-title">Foco em eficiência e simplicidade</h2>
                     <div class="video-wrapper">
                         <div class="ratio ratio-16x9">
                             <iframe
@@ -325,15 +270,68 @@
         </div>
     </section>
 
+    <!-- About Section -->
+    <section id="about" class="about-section py-5 bg-light">
+        <div class="container">
+            <div class="text-center mb-5">
+                <h2 class="section-title" data-lang="about-title">Transforme Seus Objetivos em Resultados</h2>
+                <p class="section-description mx-auto" data-lang="about-description">
+                    O contador de calorias e macronutrientes que guia sua jornada para ganhar massa muscular, perder
+                    peso ou manter o peso atual e viver de forma mais saudável.
+                </p>
+            </div>
+
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6">
+                    <div class="about-card h-100 p-4 text-center">
+                        <div class="about-icon mb-3">
+                            <i class="fas fa-calculator fa-3x" style="color: #3ea264;"></i>
+                        </div>
+                        <h3 class="h5 mb-3" style="color: #3ea264;" data-lang="nutrition-planning-title">Planejamento Nutricional Personalizado</h3>
+                        <p data-lang="nutrition-planning-desc">Quer atingir suas metas de forma eficiente? O AmPmKcal calcula com precisão seu consumo ideal
+                            de calorias, macronutrientes (proteínas, carboidratos e gorduras) e líquidos. Tenha um plano
+                            alimentar feito sob medida para seus objetivos, seja hipertrofia, emagrecimento ou
+                            manutenção do peso.</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="about-card h-100 p-4 text-center">
+                        <div class="about-icon mb-3">
+                            <i class="fas fa-chart-line fa-3x" style="color: #3ea264;"></i>
+                        </div>
+                        <h3 class="h5 mb-3" style="color: #3ea264;" data-lang="food-monitoring-title">Monitore Sua Alimentação com Facilidade</h3>
+                        <p data-lang="food-monitoring-desc">Registre suas refeições de forma rápida e intuitiva. Nosso aplicativo conta com um vasto
+                            banco de dados de alimentos, incluindo a <strong>Tabela TACO (Tabela Brasileira de
+                                Composição de Alimentos)</strong>, garantindo precisão para a sua dieta. Acompanhe seu
+                            progresso em tempo real com gráficos detalhados.</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-12">
+                    <div class="about-card h-100 p-4 text-center">
+                        <div class="about-icon mb-3">
+                            <i class="fas fa-mobile-alt fa-3x" style="color: #3ea264;"></i>
+                        </div>
+                        <h3 class="h5 mb-3" style="color: #3ea264;" data-lang="nutrition-control-title">O Controle da Sua Nutrição na Palma da Mão, 24h por
+                            Dia</h3>
+                        <p data-lang="nutrition-control-desc">Com o AmPmKcal, você tem autonomia total sobre sua alimentação. Deixe de lado as suposições e
+                            tenha a certeza de que cada refeição contribui para o seu sucesso. Monitore, ajuste e
+                            conquiste seus objetivos com a ferramenta definitiva para uma vida mais saudável.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- CTA Section -->
     <section class="cta-section py-5" style="background-color: #f8f9fa;">
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-8 text-center">
-                    <h2 class="section-title mb-4" data-lang="ready">Ready to grow your business?</h2>
-                    <p class="section-description mb-5" data-lang="download-now">Download HishaBee Business Manager now
-                        and take control of your business.</p>
-                    <div class="d-flex justify-content-center gap-3 app-badges">
+                    <h2 class="section-title mb-4" data-lang="ready">Be in control 24/7, download now!</h2>
+                    <br>
+                    <div class="d-flex justify-content-center gap-3 app-badges flex-column flex-md-row align-items-center">
                         <a href="#" class="app-badge"
                             style="background-color: black; padding: 15px; border-radius: 30px; text-decoration: none; display: inline-flex; align-items: center; gap: 8px;">
                             <img src="/assets/btn-download-playstore.svg" alt="Google Play" class="img-fluid"
@@ -364,13 +362,13 @@
                 <div class="col-lg-3 mb-4 mb-lg-0">
                     <h5 data-lang="useful-links">Useful Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#" data-lang="privacy">Privacy Policy</a></li>
-                        <li><a href="#" data-lang="terms">Terms of Use</a></li>
+                        <li><a href="privacy-policy.html" data-lang="privacy">Privacy Policy</a></li>
+                        <li><a href="terms-of-service.html" data-lang="terms">Terms of Use</a></li>
                         <li><a href="mailto:contact@ampmkcal.com" data-lang="contact-us">Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 mb-lg-0">
-                    <h5>Feito por</h5>
+                    <h5 data-lang="made-by">Feito por</h5>
                     <a href="https://www.umdesenvolvedor.com.br" target="_blank">UmDesenvolvedor</a>
                 </div>
             </div>
