Enhance privacy policy section for health data clarity and readability

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -150,28 +150,41 @@
 
             <p>O aplicativo não coleta informações precisas sobre a localização do seu dispositivo móvel.</p>
 
-            <b>Dados de Saúde (Health Connect / Apple Health):</b>
+            <h3>Dados de Saúde (Health Connect / Apple Health)</h3>
 
             <p>Com sua permissão explícita, o aplicativo acessa e utiliza os seguintes dados de saúde através do Health
                 Connect (Android) ou Apple Health (iOS):</p>
 
             <ul>
-                <li>Exercícios/Treinos (WORKOUT)**: Para registrar e exibir suas atividades físicas, incluindo tipo de
-                    exercício, duração e data/hora.
-                    <li>Calorias Ativas Queimadas (ACTIVE_ENERGY_BURNED)**: Para calcular e apresentar o gasto calórico durante
-                suas atividades físicas.</li>
+                <li><strong>Exercícios/Treinos (WORKOUT):</strong> Para registrar e exibir suas atividades físicas,
+                    incluindo tipo de exercício, duração e data/hora.</li>
+                <li><strong>Calorias Ativas Queimadas (ACTIVE_ENERGY_BURNED):</strong> Para calcular e apresentar o
+                    gasto calórico durante suas atividades físicas.</li>
+                <li><strong>Passos (STEPS):</strong> Acessados automaticamente quando associados a treinos de caminhada
+                    ou corrida. Esses dados são necessários tecnicamente pelo Health Connect para retornar informações
+                    completas sobre seus exercícios, mas não são exibidos separadamente no aplicativo.</li>
+                <li><strong>Distância (DISTANCE):</strong> Acessada automaticamente quando associada a treinos como
+                    corrida, caminhada, ciclismo ou natação. Esses dados são necessários tecnicamente pelo Health
+                    Connect para retornar informações completas sobre seus exercícios, mas não são exibidos
+                    separadamente no aplicativo.</li>
             </ul>
 
             <p>Esses dados são utilizados exclusivamente para:</p>
-            
+
             <ul>
                 <li>Apresentar um histórico dos seus exercícios e atividades físicas</li>
                 <li>Calcular e exibir o total de calorias queimadas durante os treinos</li>
                 <li>Fornecer estatísticas e métricas sobre seu desempenho físico</li>
             </ul>
 
-            <p>Os dados de saúde são processados localmente no seu dispositivo e sincronizados apenas com os servidores do aplicativo mediante sua autorização. 
-                Você pode revogar o acesso a esses dados a qualquer momento através das configurações do Health Connect/Apple Health.</p>
+            <p><strong>Importante:</strong> Embora o aplicativo solicite permissões para acessar dados de passos e
+                distância, esses dados são utilizados apenas quando estão associados aos seus treinos registrados. O
+                aplicativo não rastreia, armazena ou exibe esses dados de forma isolada - eles são acessados somente
+                como parte dos registros completos de exercícios fornecidos pelo Health Connect/Apple Health.</p>
+
+            <p>Os dados de saúde são processados localmente no seu dispositivo e sincronizados apenas com os servidores
+                do aplicativo mediante sua autorização. Você pode revogar o acesso a esses dados a qualquer momento
+                através das configurações do Health Connect/Apple Health.</p>
 
             <p>O prestador de serviços poderá utilizar as informações que você forneceu para entrar em contato com você
                 ocasionalmente e fornecer informações importantes, avisos necessários e promoções de marketing.</p>
