Add download links for Google Play and App Store in the hero section

--- a/index.html
+++ b/index.html
@@ -89,14 +89,16 @@
                     <p class="lead mb-5 text-black-01" data-lang="hero-subtitle">Gerencie a sua dieta de uma forma fácil
                         e prática.</p>
                     <div class="d-flex gap-3 app-badges">
-                        <a href="#" class="app-badge"
-                            style="background-color: black; padding: 15px; border-radius: 30px; text-decoration: none; display: inline-flex; align-items: center; gap: 8px;">
+                        <a href="https://play.google.com/store/apps/details?id=br.com.umdesenvolvedor.ampmkcal" class="app-badge"
+                            style="background-color: black; padding: 15px; border-radius: 30px; text-decoration: none; display: inline-flex; align-items: center; gap: 8px;"
+                            target="_blank" rel="noopener noreferrer">
                             <img src="/assets/btn-download-playstore.svg" alt="Google Play" class="img-fluid"
                                 style="height: 24px;">
                             <span style="color: white; font-weight: 500;">Download Play Store</span>
                         </a>
-                        <a href="#" class="app-badge"
-                            style="background-color: black; padding: 15px; border-radius: 30px; text-decoration: none; display: inline-flex; align-items: center; gap: 8px;">
+                        <a href="https://apps.apple.com/us/app/ampmkcal-controle-de-dieta/id6748043686" class="app-badge"
+                            style="background-color: black; padding: 15px; border-radius: 30px; text-decoration: none; display: inline-flex; align-items: center; gap: 8px;"
+                            target="_blank" rel="noopener noreferrer">
                             <img src="/assets/btn-download-applestore.svg" alt="App Store" class="img-fluid"
                                 style="height: 24px;">
                             <span style="color: white; font-weight: 500;">Download App Store</span>
@@ -332,14 +334,16 @@
                     <h2 class="section-title mb-4" data-lang="ready">Be in control 24/7, download now!</h2>
                     <br>
                     <div class="d-flex justify-content-center gap-3 app-badges flex-column flex-md-row align-items-center">
-                        <a href="#" class="app-badge"
-                            style="background-color: black; padding: 15px; border-radius: 30px; text-decoration: none; display: inline-flex; align-items: center; gap: 8px;">
+                        <a href="https://play.google.com/store/apps/details?id=br.com.umdesenvolvedor.ampmkcal" class="app-badge"
+                            style="background-color: black; padding: 15px; border-radius: 30px; text-decoration: none; display: inline-flex; align-items: center; gap: 8px;"
+                            target="_blank" rel="noopener noreferrer">
                             <img src="/assets/btn-download-playstore.svg" alt="Google Play" class="img-fluid"
                                 style="height: 24px;">
                             <span style="color: white; font-weight: 500;">Download Play Store</span>
                         </a>
-                        <a href="#" class="app-badge"
-                            style="background-color: black; padding: 15px; border-radius: 30px; text-decoration: none; display: inline-flex; align-items: center; gap: 8px;">
+                        <a href="https://apps.apple.com/us/app/ampmkcal-controle-de-dieta/id6748043686" class="app-badge"
+                            style="background-color: black; padding: 15px; border-radius: 30px; text-decoration: none; display: inline-flex; align-items: center; gap: 8px;"
+                            target="_blank" rel="noopener noreferrer">
                             <img src="/assets/btn-download-applestore.svg" alt="App Store" class="img-fluid"
                                 style="height: 24px;">
                             <span style="color: white; font-weight: 500;">Download App Store</span>
